Archive2/77/ee385bd6f77c85/output
main.cpp:4:5: error: expected unqualified-id before 'if'
     if (a>b) {
     ^
